webapp/frontend/public/node-ui.css
:root {
    --node-icon-size: 17px;
    --node-connection-length: 30px;
    --oscillator-connection-length: calc(2 * var(--node-connection-length) +
                                         var(--node-icon-size));
    --module-connection-length: 20px;
    --stroke-width: 1px;
    --body-width: 401px; /* uneven -> connectors can be perfectly in middle */
    --root-node-height: 25px;
    --root-node-width: 101px;
    --root-node-padding: 5px;
    --all-node-icon-shadow-width: 3px;
    --line-height: 20px;
    --spacing: 5px;
}

* {
    -moz-user-select: none;
    user-select: none;
}

html, body {
    background: black;
    color: white;
}

body {
    width: var(--body-width);
    margin: 15px;
    font: normal normal normal 14px "Source Code Pro";
    line-height: var(--line-height);
}

ul.all.nodes {
    margin-bottom: 20px;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}

ul.all.nodes>li::after {
    content: none;
}

li.node-icon>a {
    display: block;
    width: 100%;
    height: 100%;
}

ul.all.nodes>li.node-icon {
    width: calc(var(--node-icon-size) + 2 * var(--all-node-icon-shadow-width));
    height: calc(var(--node-icon-size) + 2 * var(--all-node-icon-shadow-width));
    box-shadow: inset 0 0 0 var(--all-node-icon-shadow-width) black;
    margin: var(--spacing);
}

ul.all.nodes>li.this.node-icon {
    box-shadow: inset 0 0 0 var(--stroke-width) white,
                inset 0 0 0 var(--all-node-icon-shadow-width) black;
}

ul.all.nodes>li.root.node-icon {
    display: none;
}

.graph {
    position: relative;
}

.graph button {
    position: absolute;
    background: transparent;
    border: 0;
    padding: 0;
    margin: 0;
    outline: 0;
    width: 20px;
    height: 20px;
    top: 40px; /* TODO: calculate position */
    left: 240px; /* TODO: calculate position */
    color: transparent;
}

.graph canvas {
    display: block;
}

.hidden.graph canvas {
    visibility: hidden;
}

.hidden.graph button {
    color: white;
}

.node-icon {
    display: block;
    width: var(--node-icon-size);
    height: var(--node-icon-size);
    border-radius: 50%;
}

ul.output.nodes>li.root.node-icon {
    background: transparent !important;
    text-align: center;
    font-size: var(--root-node-height);
    line-height: var(--root-node-height);
    width: var(--root-node-width);
    height: var(--root-node-height);
    padding-top: var(--root-node-padding);
}

ul.output.nodes>li.root.node-icon::before {
    content: "🔊";
}

ul.output.nodes>li.root.node-icon::after {
    margin-top: calc(-1 * (var(--node-connection-length)
                           + var(--root-node-height)
                           + var(--root-node-padding)));
    margin-left: calc((var(--root-node-width) - var(--node-icon-size)) / 2);
}

ul.nodes {
    display: flex;
    align-items: flex-start;
    justify-content: space-around;
}

ul.nodes>li {
    width: var(--node-icon-size);
}

ul.input.nodes>li.node-icon {
    margin-top: calc(var(--oscillator-connection-length)
                     - var(--node-icon-size)
                     - var(--node-connection-length));
}

ul.output.nodes>li.node-icon {
    margin-top: var(--node-connection-length);
}

/* Common width, as otherwise vertical line width - oddly - can vary when scaled
   up on high DPI displays. */
ul.nodes>li::after, ul.controls>li::after {
    content: "";
    display: block;
    width: calc(var(--node-icon-size) / 2 - var(--stroke-width) / 2);
    margin-right: calc(var(--node-icon-size) / 2 - var(--stroke-width) / 2);
    border-right: var(--stroke-width) solid white;
}

ul.nodes>li::after {
    height: var(--node-connection-length);
}

ul.output.nodes>li::after {
    margin-top: calc(-1 * var(--node-connection-length)
                     - var(--node-icon-size));
}

ul.nodes>li.oscillator::after {
    margin-top: 0;
    height: var(--oscillator-connection-length);
}

ul.controls>li {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
}

ul.controls>li::after {
    height: var(--module-connection-length);
}

ul.controls>li:last-child::after {
    height: 0;
}

ul.controls>li.graph::after {
    border: 0;
}

ul.controls>li>div {
    box-sizing: border-box;
    padding: 10px;
    width: 100%;
    border: var(--stroke-width) solid white;
    border-radius: var(--spacing);
}

.range-selector>div {
    display: flex;
    justify-content: space-between;
}

.range-selector>div>div {
    display: block;
    flex: 1;
}

.range-selector>div>div:first-child {
    margin-right: var(--spacing);
}

.range-selector span {
    display: inline-block;
    margin: 0 4px;
}

.range-selector span.number {
    width: 60px;
    text-align: right;
}

.range-selector span.unit {
    width: 25px;
}

.range-selector input {
    display: inline-block;
    height: 14px;
    width: 100%;
    margin: 0;
    padding: 4px 0;
    vertical-align: top;
}

input[type=range] {
    background: transparent;
}

input[type=range],
input[type=range]::-webkit-slider-runnable-track,
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
}

input[type=range]::-moz-range-track {
    background-color: white;
    height: var(--stroke-width);
}

input[type=range]::-webkit-slider-runnable-track {
    background-color: white;
    height: var(--stroke-width);
}

input[type="range"]::-moz-range-thumb {
  position: relative;
  height: 14px;
  width: 14px;
  margin-top: -6px;
  background: black;
  border-radius: 50%;
  border: var(--stroke-width) solid white;
}

input[type="range"]::-webkit-slider-thumb {
  position: relative;
  height: 14px;
  width: 14px;
  margin-top: -6px;
  background: black;
  border-radius: 50%;
  border: var(--stroke-width) solid white;
}

input:focus {
    outline: none;
}

input, label {
    cursor: pointer;
}

.radio-selector ul {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.radio-selector li {
    display: block;
    flex: 1;
    text-align: center;
    margin-right: var(--spacing);
}

.radio-selector li:last-child {
    margin-right: 0;
}

.radio-selector input {
    width: auto;
    display: none;
}

.radio-selector label>span {
    display: inline-block;
    width: 100%;
    border: var(--stroke-width) solid black;
}

.radio-selector input:checked+span {
    border-color: white;
}

.toggle-selector input {
    display: none;
}

.toggle-selector span::before {
    display: inline-block;
    content: " ";
    width: var(--line-height);
    height: var(--line-height);
    border: var(--stroke-width) solid white;
    text-align: center;
    margin-right: var(--spacing);
}

.toggle-selector input:checked+span::before {
    content: "✓";
}

